--- a/03_pytorch.ipynb
+++ b/03_pytorch.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
        "(60000, 10000)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
        " 9)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
        " 'Ankle boot']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        " 'Ankle boot': 9}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
        " Transform: ToTensor())"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,17 +463,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(<torch.utils.data.dataloader.DataLoader at 0x7f9768463a90>,\n",
-       " <torch.utils.data.dataloader.DataLoader at 0x7f9768463b50>)"
+       "(<torch.utils.data.dataloader.DataLoader at 0x7fad919683a0>,\n",
+       " <torch.utils.data.dataloader.DataLoader at 0x7fad91968d90>)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,15 +497,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DataLoaders: <torch.utils.data.dataloader.DataLoader object at 0x7f9768463a90> \n",
-      " <torch.utils.data.dataloader.DataLoader object at 0x7f9768463b50>\n"
+      "DataLoaders: <torch.utils.data.dataloader.DataLoader object at 0x7fad919683a0> \n",
+      " <torch.utils.data.dataloader.DataLoader object at 0x7fad91968d90>\n"
      ]
     }
    ],
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
        "(torch.Size([32, 1, 28, 28]), torch.Size([32]))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +712,7 @@
        "         0.0000]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +763,7 @@
        ")"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +792,7 @@
        "         -0.1004,  0.0157]], grad_fn=<AddmmBackward0>)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -847,7 +847,7 @@
        "                      -0.2612, -0.2613]))])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -954,10 +954,10 @@
     {
      "data": {
       "text/plain": [
-       "1.3874999922336428e-05"
+       "1.3542000001365295e-05"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,13 +985,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "690242174b6041b9accae6f4ca097eb3",
+       "model_id": "0736f92ce58f42bb96476c966545ee6b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1014,7 +1014,7 @@
       "Looked at: 38400 / 60000 samples.\n",
       "Looked at: 51200 / 60000 samples.\n",
       "\n",
-      " Train loss: 0.4176 | Test loss: 0.0142 | Test acc: 84.1454\n",
+      " Train loss: 0.5904 | Test loss: 0.0159 | Test acc: 82.0387\n",
       "Epoch: 1 \n",
       "-------\n",
       "Looked at: 0 / 60000 samples.\n",
@@ -1023,7 +1023,7 @@
       "Looked at: 38400 / 60000 samples.\n",
       "Looked at: 51200 / 60000 samples.\n",
       "\n",
-      " Train loss: 0.4159 | Test loss: 0.0143 | Test acc: 84.1753\n",
+      " Train loss: 0.4763 | Test loss: 0.0150 | Test acc: 83.1969\n",
       "Epoch: 2 \n",
       "-------\n",
       "Looked at: 0 / 60000 samples.\n",
@@ -1032,8 +1032,8 @@
       "Looked at: 38400 / 60000 samples.\n",
       "Looked at: 51200 / 60000 samples.\n",
       "\n",
-      " Train loss: 0.4130 | Test loss: 0.0144 | Test acc: 84.1354\n",
-      "Train time on cpu: 9.218 seconds\n"
+      " Train loss: 0.4550 | Test loss: 0.0149 | Test acc: 83.4265\n",
+      "Train time on cpu: 9.423 seconds\n"
      ]
     }
    ],
@@ -1108,20 +1108,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'cpu'"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -1134,13 +1123,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e4fa8d2d014a4499a4bc094646ab3f82",
+       "model_id": "c4577779806b443ca346b1fac12f5230",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1155,11 +1144,11 @@
      "data": {
       "text/plain": [
        "{'model_name': 'FashionMNISTModelV0',\n",
-       " 'model_loss': 0.4616372585296631,\n",
-       " 'model_acc': 84.13538338658147}"
+       " 'model_loss': 0.47663894295692444,\n",
+       " 'model_acc': 83.42651757188499}"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1210,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1219,7 +1208,7 @@
        "'cpu'"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1241,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1267,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1285,7 +1274,7 @@
        " ))"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1309,14 +1298,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "from helper_functions import accuracy_fn\n",
     "loss_fn = nn.CrossEntropyLoss()\n",
     "optimizer = torch.optim.SGD(params=model_1.parameters(),\n",
-    "                             lr=0.1)"
+    "                             lr=0.01)"
    ]
   },
   {
@@ -1333,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1401,18 +1390,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3913cc127814866a69d445ee7220d8a",
+       "model_id": "ecadf7c52139480d9b1ad781de4e4fde",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/3 [00:00<?, ?it/s]"
+       "  0%|          | 0/10 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -1424,20 +1413,55 @@
      "text": [
       "Epoch: 0\n",
       "---------\n",
-      "Train loss: 2.30256 | Train accuracy: 10.00%\n",
-      "Test loss: 2.30259 | Test accuracy: 9.98%\n",
+      "Train loss: 1.09199 | Train accuracy: 61.34%\n",
+      "Test loss: 0.95636 | Test accuracy: 65.00%\n",
       "\n",
       "Epoch: 1\n",
       "---------\n",
-      "Train loss: 2.30256 | Train accuracy: 10.00%\n",
-      "Test loss: 2.30259 | Test accuracy: 9.98%\n",
+      "Train loss: 0.78101 | Train accuracy: 71.93%\n",
+      "Test loss: 0.72227 | Test accuracy: 73.91%\n",
       "\n",
       "Epoch: 2\n",
       "---------\n",
-      "Train loss: 2.30256 | Train accuracy: 10.00%\n",
-      "Test loss: 2.30259 | Test accuracy: 9.98%\n",
+      "Train loss: 0.67027 | Train accuracy: 75.94%\n",
+      "Test loss: 0.68500 | Test accuracy: 75.02%\n",
       "\n",
-      "Train time on cpu: 9.405 seconds\n"
+      "Epoch: 3\n",
+      "---------\n",
+      "Train loss: 0.64384 | Train accuracy: 76.52%\n",
+      "Test loss: 0.65079 | Test accuracy: 76.13%\n",
+      "\n",
+      "Epoch: 4\n",
+      "---------\n",
+      "Train loss: 0.62892 | Train accuracy: 77.00%\n",
+      "Test loss: 0.65277 | Test accuracy: 75.95%\n",
+      "\n",
+      "Epoch: 5\n",
+      "---------\n",
+      "Train loss: 0.61569 | Train accuracy: 77.43%\n",
+      "Test loss: 0.64517 | Test accuracy: 76.54%\n",
+      "\n",
+      "Epoch: 6\n",
+      "---------\n",
+      "Train loss: 0.60672 | Train accuracy: 77.80%\n",
+      "Test loss: 0.62879 | Test accuracy: 76.67%\n",
+      "\n",
+      "Epoch: 7\n",
+      "---------\n",
+      "Train loss: 0.47136 | Train accuracy: 83.09%\n",
+      "Test loss: 0.44768 | Test accuracy: 84.30%\n",
+      "\n",
+      "Epoch: 8\n",
+      "---------\n",
+      "Train loss: 0.39947 | Train accuracy: 85.96%\n",
+      "Test loss: 0.44110 | Test accuracy: 84.75%\n",
+      "\n",
+      "Epoch: 9\n",
+      "---------\n",
+      "Train loss: 0.39380 | Train accuracy: 86.17%\n",
+      "Test loss: 0.43291 | Test accuracy: 84.82%\n",
+      "\n",
+      "Train time on cpu: 31.244 seconds\n"
      ]
     }
    ],
@@ -1448,7 +1472,7 @@
     "from timeit import default_timer as timer\n",
     "train_time_start_on_gpu = timer()\n",
     "\n",
-    "epochs = 3\n",
+    "epochs = 10\n",
     "for epoch in tqdm(range(epochs)):\n",
     "    print(f\"Epoch: {epoch}\\n---------\")\n",
     "    train_step(data_loader=train_dataloader, \n",
